aio/deploy/kz-eu/pull-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard
spec:
  template:
    spec:
      imagePullSecrets:
      - name: lazedo-ghcr
      containers:
      - name: kubernetes-dashboard
        imagePullPolicy: Always
        volumeMounts:
        - name: ca-bundle
          mountPath: /certs
        - name: kubeconfig
          mountPath: /kubeconfig
        args:
        - --namespace=dashboard
        - --insecure-bind-address=0.0.0.0
        - --insecure-port=9090
        - --enable-insecure-login
        - --kubeconfig=/kubeconfig/config
      volumes:
      - name: oidc-ca
        secret:
          secretName: kube-oidc-proxy-ca
          items:
          - key: ca.crt
            path: ca.crt
      - name: ca-bundle
        emptyDir: {}
      - name: kubeconfig
        configMap:
          name: dashboard-kubeconfig
